add bottom navigation bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="Timed">Timed</string>
     <string name="Progressive">Progressive</string>
+    <string name="progress">Progress</string>
+    <string name="type">Type</string>
 </resources>
