--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Progressive">Progressive</string>
     <string name="progress">Progress</string>
     <string name="type">Type</string>
+    <string name="Completed">Completed</string>
 </resources>
